# DioxusWebsite

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  input.css  package-lock.json  package.json  tailwind.config.js
assets/: tailwind.css
assets/styling/: main.css
src/: Cargo.toml  api.rs  main.rs
src/Server/: auth.rs  database.rs  main.rs  mod.rs
src/client/: auth.rs
src/components/: auth.rs  echo.rs  hero.rs  icon.rs  layout.rs  mod.rs  navbar.rs  steps.rs
src/components/ui/: button.rs  inline_form.rs  input.rs  mod.rs  modal.rs
src/views/: about.rs  blog.rs  calculator.rs  callback.rs  home.rs  login.rs  mod.rs  products.rs  protected.rs  routes.rs  team.rs
src/views/auth/: auth.rs  client.rs  mod.rs
src/views/store/: local_storage.rs  mod.rs
