[package]
name = "mortgage"
version = "0.1.0"
authors = ["Youknowwho55 <dylan9112@gmail.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.3", features = ["router", "fullstack"] }

anyhow = "1.0.97"
thiserror = "2.0.12"
chrono = "0.4.40"
serde = { version = "1.0.219", features = ["derive"] }
log = "0.4.27"
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = "0.2.100"
gloo = "0.11.0"
supabase-js-rs = "0.1.3"
serde_json = "1.0.139"
tracing = "0.1.40"


tokio = { version = "1.44.0", features = ["full"], optional = true }

http = {version = "1.3.1", optional = true}
postgrest = {version = "1.6.0", optional = true}
dotenv = { version = "0.15.0", optional = true }
uuid = { version = "1.16.0", features = ["serde", "v4", "js"]}
manganis = "0.6.2"
serde_urlencoded = "0.7.1"
web-sys = "0.3.77"
lazy_static = "1.5.0"
sqlx = {version = "0.8.3", features = [
    "sqlx-postgres",
    "runtime-tokio-native-tls",
    "macros",
], optional = true}


[build-dependencies]
dotenv = "0.15.0"

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = ["dioxus/server", "sqlx", "tokio", "http", "postgrest", "dotenv"]
dotenv = ["dep:dotenv"]


[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"
opt-level = 1


[profile.android-dev]
inherits = "dev"
opt-level = 1







