[package]
name = "mortgage"
version = "0.1.0"
authors = ["Youknowwho55 <dylan9112@gmail.com>"]
edition = "2024"

[dependencies]
axum_session = { version = "0.16.0", optional = true }
axum_session_auth = { version = "0.16.0", optional = true }

dioxus = { version = "0.6.3", features = ["router", "fullstack"] }
dioxus-fullstack = "0.6.3"
anyhow = "1.0.97"
thiserror = "2.0.12"
chrono = "0.4.40"
serde = { version = "1.0.219", features = ["derive"] }
log = "0.4.27"
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = "0.2.100"
gloo = "0.11.0"
supabase-js-rs = "0.1.3"
serde_json = "1.0.139"
tracing = "0.1.40"

tokio = { version = "1.44.0", features = ["full"], optional = true }
http = { version = "1.3.1", optional = true }
postgrest = { version = "1.6.0", optional = true }
dotenv = { version = "0.15.0", optional = true }
uuid = { version = "1.16.0", features = ["serde", "v4", "js"] }
manganis = "0.6.2"
serde_urlencoded = "0.7.1"
web-sys = "0.3.77"
lazy_static = "1.5.0"
sqlx = { version = "0.8.3", features = ["sqlx-postgres", "runtime-tokio-native-tls", "macros"], optional = true }
reqwest = "0.12.15"

dioxus-web = { version = "0.6.3", features = ["hydrate"], optional = true }

axum = { version="0.8.3", optional = true }
tower-http = { version = "0.6.2", features = ["auth"], optional = true }
tower = { version = "0.5.2", optional = true }

simple_logger = { version = "5.0.0", optional = true }
async-trait = { version = "0.1.88", optional = true }

execute = "0.2.12"

[workspace]
members = []  # Adjust based on your actual folders
resolver = "2"

[workspace.dependencies]
dioxus-web = "0.6.3"
axum = "0.7"
tower-http = { version = "0.5", features = ["auth"] }
tower = "0.4"
tokio = { version = "1.44.0", features = ["full"] }
axum_session = { version = "0.16", features = ["sqlite-rustls"] }
axum_session_auth = { version = "0.16", features = ["sqlite-rustls"] }

[build-dependencies]
dotenv = "0.15.0"

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = [
    "dioxus/server",
    "sqlx",
    "tokio",
    "http",
    "postgrest",
    "dotenv",
    "axum",
    "dioxus-fullstack/axum",
    "tower-http",
    "simple_logger",
    "async-trait",
    "axum_session",
    "axum_session_auth",
    "tower"
]

[profile]
[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"
opt-level = 1

[profile.android-dev]
inherits = "dev"
opt-level = 1
