[package]
name = "axum-auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus-web = { workspace = true, features = ["hydrate"], optional = true }
dioxus = { features = ["fullstack"], workspace = true }
dioxus-fullstack = { workspace = true }
axum = { workspace = true, optional = true }
tokio = { workspace = true, features = ["full"], optional = true }
tower-http = { workspace = true, features = ["auth"], optional = true }
simple_logger = { version = "5.0.0", optional = true }
async-trait = { version = "0.1.88", optional = true }
sqlx = { version = "0.8.3", features = [
    "macros",
    "migrate",
    "postgres",
    "sqlite",
    "_unstable-all-types",
    "tls-rustls",
    "runtime-tokio",
], optional = true }
http = { workspace = true, optional = true }
tower = { workspace = true, optional = true }
execute = "0.2.12"
anyhow = "1.0.97"
dotenv = "0.15.0"
serde = "1.0.219"


[dependencies.axum_session]
workspace = true
features = ["sqlite-rustls"]
optional = true

[dependencies.axum_session_auth]
workspace = true
features = ["sqlite-rustls"]
optional = true

[features]
default = []
server = ["axum", "tokio", "dioxus-fullstack/axum", "tower-http", "simple_logger", "async-trait", "sqlx", "axum_session", "axum_session_auth", "http", "tower"]
web = ["dioxus-web"]